# Project3-eesheppa

./: AVLTree.h  BinarySearchTree.h  CMakeLists.txt  Report.md  SplayTree.h  climate_change_impact.h  climate_change_impact_h.h  climate_change_impact_on_agriculture_2024.csv  main.cpp  project1main.h
data/: customDataTrees.csv  treeDepths
